[package]
name = "bili-sub-filter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = "0.4.44"
serde = {version ="1.0.147",features = ["derive"]}
serde_yaml = "0.9.14"
serde_json = "1.0.88"
lazy_static = "1.4.0"
tokio = { version = "1.20.1", features = ["full"] }
async-channel = "1.7.1"